k8s/prometheus/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`prometheus.home.gaborzeller.com`)
      kind: Rule
      services:
        - name: prometheus
          port: 9090
  tls:
    certResolver: cloudflare
    domains:
      - main: "*.home.gaborzeller.com"
